--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react-dom": "^18.0.4",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "firebase": "^9.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
