--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://aliaksandra-leanovich.github.io/react-bookstore/",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
