--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "firebase": "^9.8.1",
@@ -21,6 +22,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
